versions/0.22.0/_sources/refs/_aws-cdk_aws-sns.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"j0Frvz5nl8NbI7f/hJL6/IUozb4Z1sPko/SCVw/7uRs="}

@aws-cdk/aws-sns
================

.. mdinclude:: ./__aws-cdk_aws-sns.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.SNS/0.22.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.SNS" Version="0.22.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.SNS --version 0.22.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.SNS" version="0.22.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/sns/0.22.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:sns:jar:0.22.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="sns" rev="0.22.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>sns</artifactId>
           <version>0.22.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:sns:0.22.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='sns', version='0.22.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-sns/v/0.22.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-sns@0.22.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-sns": "^0.22.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-sns@0.22.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-sns/v/0.22.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-sns@0.22.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-sns": "^0.22.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-sns@0.22.0



.. py:module:: @aws-cdk/aws-sns

CfnSubscription
^^^^^^^^^^^^^^^

.. py:class:: CfnSubscription(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnSubscription;

      .. code-tab:: javascript

         const { CfnSubscription } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { CfnSubscription } from '@aws-cdk/aws-sns';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-sns.CfnSubscriptionProps`\  *(optional)*

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-sns.CfnSubscriptionProps`\  *(readonly)*


   .. py:attribute:: subscriptionArn

      :type: string *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.



      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions)

      that should be added when a resource "depends on" this construct.



      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnSubscriptionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnSubscriptionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnSubscriptionProps;

      .. code-tab:: javascript

         // CfnSubscriptionProps is an interface

      .. code-tab:: typescript

         import { CfnSubscriptionProps } from '@aws-cdk/aws-sns';





   .. py:attribute:: deliveryPolicy

      ``AWS::SNS::Subscription.DeliveryPolicy``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-subscription-deliverypolicy


      :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:attribute:: endpoint

      ``AWS::SNS::Subscription.Endpoint``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-endpoint


      :type: string *(optional)*


   .. py:attribute:: filterPolicy

      ``AWS::SNS::Subscription.FilterPolicy``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-subscription-filterpolicy


      :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:attribute:: protocol

      ``AWS::SNS::Subscription.Protocol``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-protocol


      :type: string *(optional)*


   .. py:attribute:: rawMessageDelivery

      ``AWS::SNS::Subscription.RawMessageDelivery``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-subscription-rawmessagedelivery


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:attribute:: region

      ``AWS::SNS::Subscription.Region``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-subscription-region


      :type: string *(optional)*


   .. py:attribute:: topicArn

      ``AWS::SNS::Subscription.TopicArn``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#topicarn


      :type: string *(optional)*


CfnTopic
^^^^^^^^

.. py:class:: CfnTopic(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnTopic;

      .. code-tab:: javascript

         const { CfnTopic } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { CfnTopic } from '@aws-cdk/aws-sns';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-sns.CfnTopicProps`\  *(optional)*

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-sns.CfnTopicProps`\  *(readonly)*


   .. py:attribute:: topicArn

      :type: string *(readonly)*


   .. py:attribute:: topicName

      :type: string *(readonly)*

   .. py:class:: SubscriptionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SNS;

         .. code-tab:: java

            import software.amazon.awscdk.services.sns.CfnTopic.SubscriptionProperty;

         .. code-tab:: javascript

            // CfnTopic.SubscriptionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopic.SubscriptionProperty } from '@aws-cdk/aws-sns';





      .. py:attribute:: endpoint

         ``CfnTopic.SubscriptionProperty.Endpoint``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-subscription.html#cfn-sns-topic-subscription-endpoint


         :type: string


      .. py:attribute:: protocol

         ``CfnTopic.SubscriptionProperty.Protocol``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-subscription.html#cfn-sns-topic-subscription-protocol


         :type: string



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.



      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions)

      that should be added when a resource "depends on" this construct.



      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnTopicPolicy
^^^^^^^^^^^^^^

.. py:class:: CfnTopicPolicy(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnTopicPolicy;

      .. code-tab:: javascript

         const { CfnTopicPolicy } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { CfnTopicPolicy } from '@aws-cdk/aws-sns';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-sns.CfnTopicPolicyProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-sns.CfnTopicPolicyProps`\  *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.



      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions)

      that should be added when a resource "depends on" this construct.



      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnTopicPolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnTopicPolicyProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnTopicPolicyProps;

      .. code-tab:: javascript

         // CfnTopicPolicyProps is an interface

      .. code-tab:: typescript

         import { CfnTopicPolicyProps } from '@aws-cdk/aws-sns';





   .. py:attribute:: policyDocument

      ``AWS::SNS::TopicPolicy.PolicyDocument``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-policy.html#cfn-sns-topicpolicy-policydocument


      :type: json or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:attribute:: topics

      ``AWS::SNS::TopicPolicy.Topics``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-policy.html#cfn-sns-topicpolicy-topics


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[]


CfnTopicProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnTopicProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnTopicProps;

      .. code-tab:: javascript

         // CfnTopicProps is an interface

      .. code-tab:: typescript

         import { CfnTopicProps } from '@aws-cdk/aws-sns';





   .. py:attribute:: displayName

      ``AWS::SNS::Topic.DisplayName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-displayname


      :type: string *(optional)*


   .. py:attribute:: kmsMasterKeyId

      ``AWS::SNS::Topic.KmsMasterKeyId``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-kmsmasterkeyid


      :type: string *(optional)*


   .. py:attribute:: subscription

      ``AWS::SNS::Topic.Subscription``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-subscription


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-sns.CfnTopic.SubscriptionProperty`\ )[] *(optional)*


   .. py:attribute:: topicName

      ``AWS::SNS::Topic.TopicName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-topicname


      :type: string *(optional)*


EmailSubscriptionOptions (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: EmailSubscriptionOptions

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.EmailSubscriptionOptions;

      .. code-tab:: javascript

         // EmailSubscriptionOptions is an interface

      .. code-tab:: typescript

         import { EmailSubscriptionOptions } from '@aws-cdk/aws-sns';



   Options for email subscriptions.





   .. py:attribute:: json

      Indicates if the full notification JSON should be sent to the email

      address or just the message text.



      :type: boolean *(optional)*
      :default: Message text (false)


ITopic (interface)
^^^^^^^^^^^^^^^^^^

.. py:class:: ITopic

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.ITopic;

      .. code-tab:: javascript

         // ITopic is an interface

      .. code-tab:: typescript

         import { ITopic } from '@aws-cdk/aws-sns';



   :extends: :py:class:`@aws-cdk/cdk.IConstruct`\ 
   :extends: :py:class:`@aws-cdk/aws-events.IEventRuleTarget`\ 
   :extends: :py:class:`@aws-cdk/aws-cloudwatch.IAlarmAction`\ 
   :extends: :py:class:`@aws-cdk/aws-s3-notifications.IBucketNotificationDestination`\ 
   :extends: :py:class:`@aws-cdk/aws-autoscaling-api.ILifecycleHookTarget`\ 


   .. py:attribute:: topicArn

      :type: string *(readonly)*


   .. py:attribute:: topicName

      :type: string *(readonly)*


   .. py:method:: addToResourcePolicy(statement)

      Adds a statement to the IAM resource policy associated with this topic.

      

      If this topic was created in this stack (`new Topic`), a topic policy

      will be automatically created upon the first call to `addToPolicy`. If

      the topic is improted (`Topic.import`), then this is a no-op.



      :param statement: 
      :type statement: :py:class:`@aws-cdk/aws-iam.PolicyStatement`\ 
      :abstract: Yes


   .. py:method:: export() -> @aws-cdk/aws-sns.TopicImportProps

      Export this Topic



      :rtype: :py:class:`~@aws-cdk/aws-sns.TopicImportProps`\ 
      :abstract: Yes


   .. py:method:: grantPublish([identity])

      Grant topic publishing permissions to the given identity



      :param identity: 
      :type identity: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*
      :abstract: Yes


   .. py:method:: metric(metricName, [props]) -> @aws-cdk/aws-cloudwatch.Metric

      Construct a Metric object for the current topic for the given metric



      :param metricName: 
      :type metricName: string
      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricNumberOfMessagesDelivered([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of messages that were successfully delivered through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricNumberOfMessagesFailed([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of messages that failed to publish through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricNumberOfMessagesPublished([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of messages published through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricPublishSize([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the size of messages published through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: subscribe(name, endpoint, protocol) -> @aws-cdk/aws-sns.Subscription

      Subscribe some endpoint to this topic



      :param name: 
      :type name: string
      :param endpoint: 
      :type endpoint: string
      :param protocol: 
      :type protocol: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: subscribeEmail(name, emailAddress, [options]) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS topic to an email address.



      :param name: A name for the subscription
      :type name: string
      :param emailAddress: The email address to use.
      :type emailAddress: string
      :param options: 
      :type options: :py:class:`~@aws-cdk/aws-sns.EmailSubscriptionOptions`\  *(optional)*
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: subscribeLambda(lambdaFunction) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS Topic to a Lambda function.

      

      The Lambda's resource policy will be updated to allow this topic to

      invoke the function.



      :param lambdaFunction: The Lambda function to invoke
      :type lambdaFunction: :py:class:`@aws-cdk/aws-lambda.IFunction`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: subscribeQueue(queue) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS topic to an SQS queue.

      

      The queue resource policy will be updated to allow this SNS topic to send

      messages to the queue.



      :param queue: The target queue
      :type queue: :py:class:`@aws-cdk/aws-sqs.IQueue`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: subscribeUrl(name, url) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS topic to an http:// or https:// URL.



      :param name: A name for the subscription
      :type name: string
      :param url: The URL to invoke
      :type url: string
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: asLifecycleHookTarget(lifecycleHook) -> @aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps

      *Inherited from* :py:meth:`@aws-cdk/aws-autoscaling-api.ILifecycleHookTarget <@aws-cdk/aws-autoscaling-api.ILifecycleHookTarget.asLifecycleHookTarget>`

      Called when this object is used as the target of a lifecycle hook



      :param lifecycleHook: 
      :type lifecycleHook: :py:class:`@aws-cdk/aws-autoscaling-api.ILifecycleHook`\ 
      :rtype: :py:class:`@aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps`\ 
      :abstract: Yes


   .. py:attribute:: alarmActionArn

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.IAlarmAction <@aws-cdk/aws-cloudwatch.IAlarmAction.alarmActionArn>`

      Return the ARN that should be used for a CloudWatch Alarm action



      :type: string *(readonly)*


   .. py:method:: asEventRuleTarget(ruleArn, ruleUniqueId) -> @aws-cdk/aws-events.EventRuleTargetProps

      *Inherited from* :py:meth:`@aws-cdk/aws-events.IEventRuleTarget <@aws-cdk/aws-events.IEventRuleTarget.asEventRuleTarget>`

      Returns the rule target specification.

      NOTE: Do not use the various `inputXxx` options. They can be set in a call to `addTarget`.



      :param ruleArn: The ARN of the CloudWatch Event Rule that would trigger this target.
      :type ruleArn: string
      :param ruleUniqueId: A unique ID for this rule. Can be used to implement idempotency.
      :type ruleUniqueId: string
      :rtype: :py:class:`@aws-cdk/aws-events.EventRuleTargetProps`\ 
      :abstract: Yes


   .. py:method:: asBucketNotificationDestination(bucketArn, bucketId) -> @aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps

      *Inherited from* :py:meth:`@aws-cdk/aws-s3-notifications.IBucketNotificationDestination <@aws-cdk/aws-s3-notifications.IBucketNotificationDestination.asBucketNotificationDestination>`

      Registers this resource to receive notifications for the specified

      bucket. This method will only be called once for each destination/bucket

      pair and the result will be cached, so there is no need to implement

      idempotency in each destination.



      :param bucketArn: The ARN of the bucket
      :type bucketArn: string
      :param bucketId: A unique ID of this bucket in the stack
      :type bucketId: string
      :rtype: :py:class:`@aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps`\ 
      :abstract: Yes


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.IConstruct <@aws-cdk/cdk.IConstruct.node>`

      The construct node in the scope tree.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


Subscription
^^^^^^^^^^^^

.. py:class:: Subscription(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.Subscription;

      .. code-tab:: javascript

         const { Subscription } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { Subscription } from '@aws-cdk/aws-sns';



   A new subscription.

   

   Prefer to use the `ITopic.subscribeXxx()` methods to creating instances of

   this class.



   :extends: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sns.SubscriptionProps`\ 

   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


SubscriptionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SubscriptionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.SubscriptionProps;

      .. code-tab:: javascript

         // SubscriptionProps is an interface

      .. code-tab:: typescript

         import { SubscriptionProps } from '@aws-cdk/aws-sns';



   Properties for creating a new subscription





   .. py:attribute:: endpoint

      The subscription endpoint.

      

      The meaning of this value depends on the value for 'protocol'.



      :type: any


   .. py:attribute:: protocol

      What type of subscription to add.



      :type: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`\ 


   .. py:attribute:: topic

      The topic to subscribe to.



      :type: :py:class:`~@aws-cdk/aws-sns.ITopic`\ 


SubscriptionProtocol (enum)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SubscriptionProtocol

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.SubscriptionProtocol;

      .. code-tab:: javascript

         const { SubscriptionProtocol } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { SubscriptionProtocol } from '@aws-cdk/aws-sns';



   The type of subscription, controlling the type of the endpoint parameter.



   .. py:data:: Http

   JSON-encoded message is POSTED to an HTTP url.



   .. py:data:: Https

   JSON-encoded message is POSTed to an HTTPS url.



   .. py:data:: Email

   Notifications are sent via email.



   .. py:data:: EmailJson

   Notifications are JSON-encoded and sent via mail.



   .. py:data:: Sms

   Notification is delivered by SMS



   .. py:data:: Sqs

   Notifications are enqueued into an SQS queue.



   .. py:data:: Application

   JSON-encoded notifications are sent to a mobile app endpoint.



   .. py:data:: Lambda

   Notifications trigger a Lambda function.




Topic
^^^^^

.. py:class:: Topic(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.Topic;

      .. code-tab:: javascript

         const { Topic } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { Topic } from '@aws-cdk/aws-sns';



   A new SNS topic



   :extends: :py:class:`~@aws-cdk/aws-sns.TopicBase`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sns.TopicProps`\  *(optional)*

   .. py:staticmethod:: import(scope, id, props) -> @aws-cdk/aws-sns.ITopic

      Import a Topic defined elsewhere



      :param scope: 
      :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
      :param id: 
      :type id: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-sns.TopicImportProps`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.ITopic`\ 


   .. py:method:: export() -> @aws-cdk/aws-sns.TopicImportProps

      *Implements* :py:meth:`@aws-cdk/aws-sns.TopicBase.export`

      Export this Topic



      :rtype: :py:class:`~@aws-cdk/aws-sns.TopicImportProps`\ 


   .. py:attribute:: autoCreatePolicy

      *Implements* :py:meth:`@aws-cdk/aws-sns.TopicBase.autoCreatePolicy`

      Controls automatic creation of policy objects.

      

      Set by subclasses.



      *Protected property*

      :type: boolean *(readonly)*


   .. py:attribute:: topicArn

      *Implements* :py:meth:`@aws-cdk/aws-sns.TopicBase.topicArn`

      :type: string *(readonly)*


   .. py:attribute:: topicName

      *Implements* :py:meth:`@aws-cdk/aws-sns.TopicBase.topicName`

      :type: string *(readonly)*


   .. py:method:: addToResourcePolicy(statement)

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.addToResourcePolicy>`

      Adds a statement to the IAM resource policy associated with this topic.

      

      If this topic was created in this stack (`new Topic`), a topic policy

      will be automatically created upon the first call to `addToPolicy`. If

      the topic is improted (`Topic.import`), then this is a no-op.



      :param statement: 
      :type statement: :py:class:`@aws-cdk/aws-iam.PolicyStatement`\ 


   .. py:method:: asBucketNotificationDestination(bucketArn, bucketId) -> @aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.asBucketNotificationDestination>`

      Implements the IBucketNotificationDestination interface, allowing topics to be used

      as bucket notification destinations.



      :param bucketArn: The ARN of the bucket sending the notifications
      :type bucketArn: string
      :param bucketId: A unique ID of the bucket
      :type bucketId: string
      :rtype: :py:class:`@aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps`\ 


   .. py:method:: asEventRuleTarget(_ruleArn, _ruleId) -> @aws-cdk/aws-events.EventRuleTargetProps

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.asEventRuleTarget>`

      Returns a RuleTarget that can be used to trigger this SNS topic as a

      result from a CloudWatch event.



      :param _ruleArn: 
      :type _ruleArn: string
      :param _ruleId: 
      :type _ruleId: string
      :rtype: :py:class:`@aws-cdk/aws-events.EventRuleTargetProps`\ 


   .. py:method:: asLifecycleHookTarget(lifecycleHook) -> @aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.asLifecycleHookTarget>`

      Allow using SNS topics as lifecycle hook targets



      :param lifecycleHook: 
      :type lifecycleHook: :py:class:`@aws-cdk/aws-autoscaling-api.ILifecycleHook`\ 
      :rtype: :py:class:`@aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps`\ 


   .. py:method:: grantPublish([identity])

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.grantPublish>`

      Grant topic publishing permissions to the given identity



      :param identity: 
      :type identity: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*


   .. py:method:: metric(metricName, [props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metric>`

      Construct a Metric object for the current topic for the given metric



      :param metricName: 
      :type metricName: string
      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfMessagesDelivered([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricNumberOfMessagesDelivered>`

      Metric for the number of messages that were successfully delivered through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfMessagesFailed([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricNumberOfMessagesFailed>`

      Metric for the number of messages that failed to publish through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfMessagesPublished([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricNumberOfMessagesPublished>`

      Metric for the number of messages published through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricPublishSize([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricPublishSize>`

      Metric for the size of messages published through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: subscribe(name, endpoint, protocol) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribe>`

      Subscribe some endpoint to this topic



      :param name: 
      :type name: string
      :param endpoint: 
      :type endpoint: string
      :param protocol: 
      :type protocol: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeEmail(name, emailAddress, [options]) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribeEmail>`

      Defines a subscription from this SNS topic to an email address.



      :param name: A name for the subscription
      :type name: string
      :param emailAddress: The email address to use.
      :type emailAddress: string
      :param options: 
      :type options: :py:class:`~@aws-cdk/aws-sns.EmailSubscriptionOptions`\  *(optional)*
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeLambda(lambdaFunction) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribeLambda>`

      Defines a subscription from this SNS Topic to a Lambda function.

      

      The Lambda's resource policy will be updated to allow this topic to

      invoke the function.



      :param lambdaFunction: The Lambda function to invoke
      :type lambdaFunction: :py:class:`@aws-cdk/aws-lambda.IFunction`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeQueue(queue) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribeQueue>`

      Defines a subscription from this SNS topic to an SQS queue.

      

      The queue resource policy will be updated to allow this SNS topic to send

      messages to the queue.



      :param queue: The target queue
      :type queue: :py:class:`@aws-cdk/aws-sqs.IQueue`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeUrl(name, url) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribeUrl>`

      Defines a subscription from this SNS topic to an http:// or https:// URL.



      :param name: A name for the subscription
      :type name: string
      :param url: The URL to invoke
      :type url: string
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:attribute:: alarmActionArn

      *Inherited from* :py:attr:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.alarmActionArn>`

      Return the ARN that should be used for a CloudWatch Alarm action



      :type: string *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


TopicBase
^^^^^^^^^

.. py:class:: TopicBase(scope, id)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicBase;

      .. code-tab:: javascript

         const { TopicBase } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { TopicBase } from '@aws-cdk/aws-sns';



   Either a new or imported Topic



   :extends: :py:class:`@aws-cdk/cdk.Construct`\ 
   :implements: :py:class:`~@aws-cdk/aws-sns.ITopic`\ 
   :abstract: Yes
   :param scope: The scope in which to define this construct
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: The scoped construct ID. Must be unique amongst siblings. If the ID includes a path separator (`/`), then it will be replaced by double dash `--`.
   :type id: string

   .. py:method:: addToResourcePolicy(statement)

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.addToResourcePolicy`

      Adds a statement to the IAM resource policy associated with this topic.

      

      If this topic was created in this stack (`new Topic`), a topic policy

      will be automatically created upon the first call to `addToPolicy`. If

      the topic is improted (`Topic.import`), then this is a no-op.



      :param statement: 
      :type statement: :py:class:`@aws-cdk/aws-iam.PolicyStatement`\ 


   .. py:method:: asBucketNotificationDestination(bucketArn, bucketId) -> @aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps

      *Implements* :py:meth:`@aws-cdk/aws-s3-notifications.IBucketNotificationDestination.asBucketNotificationDestination`

      Implements the IBucketNotificationDestination interface, allowing topics to be used

      as bucket notification destinations.



      :param bucketArn: The ARN of the bucket sending the notifications
      :type bucketArn: string
      :param bucketId: A unique ID of the bucket
      :type bucketId: string
      :rtype: :py:class:`@aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps`\ 


   .. py:method:: asEventRuleTarget(_ruleArn, _ruleId) -> @aws-cdk/aws-events.EventRuleTargetProps

      *Implements* :py:meth:`@aws-cdk/aws-events.IEventRuleTarget.asEventRuleTarget`

      Returns a RuleTarget that can be used to trigger this SNS topic as a

      result from a CloudWatch event.



      :param _ruleArn: 
      :type _ruleArn: string
      :param _ruleId: 
      :type _ruleId: string
      :rtype: :py:class:`@aws-cdk/aws-events.EventRuleTargetProps`\ 


   .. py:method:: asLifecycleHookTarget(lifecycleHook) -> @aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps

      *Implements* :py:meth:`@aws-cdk/aws-autoscaling-api.ILifecycleHookTarget.asLifecycleHookTarget`

      Allow using SNS topics as lifecycle hook targets



      :param lifecycleHook: 
      :type lifecycleHook: :py:class:`@aws-cdk/aws-autoscaling-api.ILifecycleHook`\ 
      :rtype: :py:class:`@aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps`\ 


   .. py:method:: export() -> @aws-cdk/aws-sns.TopicImportProps

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.export`

      Export this Topic



      :rtype: :py:class:`~@aws-cdk/aws-sns.TopicImportProps`\ 
      :abstract: Yes


   .. py:method:: grantPublish([identity])

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.grantPublish`

      Grant topic publishing permissions to the given identity



      :param identity: 
      :type identity: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*


   .. py:method:: metric(metricName, [props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metric`

      Construct a Metric object for the current topic for the given metric



      :param metricName: 
      :type metricName: string
      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfMessagesDelivered([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricNumberOfMessagesDelivered`

      Metric for the number of messages that were successfully delivered through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfMessagesFailed([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricNumberOfMessagesFailed`

      Metric for the number of messages that failed to publish through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfMessagesPublished([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricNumberOfMessagesPublished`

      Metric for the number of messages published through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricPublishSize([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricPublishSize`

      Metric for the size of messages published through this topic



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization`\  *(optional)*
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: subscribe(name, endpoint, protocol) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribe`

      Subscribe some endpoint to this topic



      :param name: 
      :type name: string
      :param endpoint: 
      :type endpoint: string
      :param protocol: 
      :type protocol: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeEmail(name, emailAddress, [options]) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribeEmail`

      Defines a subscription from this SNS topic to an email address.



      :param name: A name for the subscription
      :type name: string
      :param emailAddress: The email address to use.
      :type emailAddress: string
      :param options: 
      :type options: :py:class:`~@aws-cdk/aws-sns.EmailSubscriptionOptions`\  *(optional)*
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeLambda(lambdaFunction) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribeLambda`

      Defines a subscription from this SNS Topic to a Lambda function.

      

      The Lambda's resource policy will be updated to allow this topic to

      invoke the function.



      :param lambdaFunction: The Lambda function to invoke
      :type lambdaFunction: :py:class:`@aws-cdk/aws-lambda.IFunction`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeQueue(queue) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribeQueue`

      Defines a subscription from this SNS topic to an SQS queue.

      

      The queue resource policy will be updated to allow this SNS topic to send

      messages to the queue.



      :param queue: The target queue
      :type queue: :py:class:`@aws-cdk/aws-sqs.IQueue`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeUrl(name, url) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribeUrl`

      Defines a subscription from this SNS topic to an http:// or https:// URL.



      :param name: A name for the subscription
      :type name: string
      :param url: The URL to invoke
      :type url: string
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:attribute:: alarmActionArn

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IAlarmAction.alarmActionArn`

      Return the ARN that should be used for a CloudWatch Alarm action



      :type: string *(readonly)*


   .. py:attribute:: autoCreatePolicy

      Controls automatic creation of policy objects.

      

      Set by subclasses.



      *Protected property*

      :type: boolean *(readonly)* *(abstract)*


   .. py:attribute:: topicArn

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.topicArn`

      :type: string *(readonly)* *(abstract)*


   .. py:attribute:: topicName

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.topicName`

      :type: string *(readonly)* *(abstract)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


TopicImportProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TopicImportProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicImportProps;

      .. code-tab:: javascript

         // TopicImportProps is an interface

      .. code-tab:: typescript

         import { TopicImportProps } from '@aws-cdk/aws-sns';



   Reference to an external topic.





   .. py:attribute:: topicArn

      :type: string


   .. py:attribute:: topicName

      :type: string


TopicPolicy
^^^^^^^^^^^

.. py:class:: TopicPolicy(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicPolicy;

      .. code-tab:: javascript

         const { TopicPolicy } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { TopicPolicy } from '@aws-cdk/aws-sns';



   Applies a policy to SNS topics.



   :extends: :py:class:`@aws-cdk/cdk.Construct`\ 
   :implements: :py:class:`@aws-cdk/cdk.IDependable`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sns.TopicPolicyProps`\ 

   .. py:attribute:: dependencyElements

      *Implements* :py:meth:`@aws-cdk/cdk.IDependable.dependencyElements`

      Allows topic policy to be added as a dependency.



      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: document

      The IAM policy document for this policy.



      :type: :py:class:`@aws-cdk/aws-iam.PolicyDocument`\  *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


TopicPolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TopicPolicyProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicPolicyProps;

      .. code-tab:: javascript

         // TopicPolicyProps is an interface

      .. code-tab:: typescript

         import { TopicPolicyProps } from '@aws-cdk/aws-sns';





   .. py:attribute:: topics

      The set of topics this policy applies to.



      :type: :py:class:`~@aws-cdk/aws-sns.ITopic`\ []


TopicProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TopicProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicProps;

      .. code-tab:: javascript

         // TopicProps is an interface

      .. code-tab:: typescript

         import { TopicProps } from '@aws-cdk/aws-sns';



   Properties for a new SNS topic





   .. py:attribute:: displayName

      A developer-defined string that can be used to identify this SNS topic.



      :type: string *(optional)*
      :default: None


   .. py:attribute:: topicName

      A name for the topic.

      

      If you don't specify a name, AWS CloudFormation generates a unique

      physical ID and uses that ID for the topic name. For more information,

      see Name Type.



      :type: string *(optional)*
      :default: Generated name


